--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
+    "vue-touch": "^2.0.0-beta.4",
+    "vue-video-player": "^5.0.2",
     "vue-waterfall2": "^1.9.6"
   },
   "devDependencies": {
